# task7

./: CMakeLists.txt  README.md
auto_aim/: CMakeLists.txt
auto_aim/include/: detector.hpp  solver.hpp  tracker.hpp  type.hpp
auto_aim/src/: detector.cpp  solver.cpp  tracker.cpp
calibration/: CMakeLists.txt  README.md  camera_calib.cpp  capture.cpp
configs/: auto_aim.yaml  auto_aim_params.yaml  camera.yaml  camera_calib.yaml
io/: CMakeLists.txt  camera.hpp
io/serials/: serial.cpp  serial.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
src/: main.cpp
test/: CMakeLists.txt  test_camera.cpp  test_detector.cpp  test_solver.cpp
